[gd_scene load_steps=8 format=2]

[ext_resource path="res://Escenas/HUD/paper_hud.png" type="Texture" id=1]
[ext_resource path="res://Escenas/HUD/CartasDeMejoras.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Menus/Assets_Stats/fireRatio_icon.png" type="Texture" id=3]
[ext_resource path="res://Escenas/HUD/progress_bar_hud.png" type="Texture" id=4]
[ext_resource path="res://Escenas/Menus/TorikoEnieV3.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.25098, 0.105882, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "Animación_desaparecer"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Mejora" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -150.0
margin_right = 202.0
margin_bottom = 150.0
size_flags_horizontal = 5
custom_constants/separation = 30

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 300 )
mouse_filter = 0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 21.0
margin_right = -14.0
margin_bottom = -13.0
custom_constants/separation = 15

[node name="MarcoImg" type="NinePatchRect" parent="HBoxContainer/NinePatchRect/VBoxContainer"]
margin_right = 172.0
margin_bottom = 172.0
rect_min_size = Vector2( 172, 172 )
texture = ExtResource( 4 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="Fondo" type="ColorRect" parent="HBoxContainer/NinePatchRect/VBoxContainer/MarcoImg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -71.5
margin_right = 71.0
margin_bottom = 70.5
rect_min_size = Vector2( 142, 142 )
size_flags_horizontal = 5
color = Color( 0.462745, 0.231373, 0.211765, 1 )

[node name="ImgCartaMejora" type="TextureRect" parent="HBoxContainer/NinePatchRect/VBoxContainer/MarcoImg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -70.5
margin_right = 71.0
margin_bottom = 71.5
rect_min_size = Vector2( 142, 142 )
size_flags_horizontal = 5
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect/VBoxContainer"]
margin_top = 187.0
margin_right = 172.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 1 )
text = "Ratio mejorado"
align = 1
autowrap = true

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer"]
margin_left = 230.0
margin_right = 430.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 300 )
mouse_filter = 0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 21.0
margin_right = -14.0
margin_bottom = -20.0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true
}

[node name="MarcoImg" type="NinePatchRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer"]
margin_right = 172.0
margin_bottom = 172.0
rect_min_size = Vector2( 172, 172 )
texture = ExtResource( 4 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ImgCartaMejora2" type="ColorRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer/MarcoImg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -71.5
margin_right = 71.0
margin_bottom = 70.5
rect_min_size = Vector2( 142, 142 )
size_flags_horizontal = 5
color = Color( 0.462745, 0.231373, 0.211765, 1 )

[node name="ImgCartaMejora" type="TextureRect" parent="HBoxContainer/NinePatchRect2/VBoxContainer/MarcoImg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -70.5
margin_right = 71.0
margin_bottom = 71.5
rect_min_size = Vector2( 142, 142 )
size_flags_horizontal = 5
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect2/VBoxContainer"]
margin_top = 187.0
margin_right = 172.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 1 )
text = "Ratio mejorado"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Animación_desaparecer" = SubResource( 2 )

[node name="Tween_In" type="Tween" parent="."]

[node name="Tween_Out" type="Tween" parent="."]

[connection signal="mouse_entered" from="HBoxContainer/NinePatchRect" to="." method="_on_NinePatchRect_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/NinePatchRect" to="." method="_on_NinePatchRect_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/NinePatchRect2" to="." method="_on_NinePatchRect2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/NinePatchRect2" to="." method="_on_NinePatchRect2_mouse_exited"]
